OK... didn't get the refactor done in time. Tomorrow's job now...

--- a/COMBINED-Examples/nifti-vtk-master/CMakeLists.txt
+++ b/COMBINED-Examples/nifti-vtk-master/CMakeLists.txt
@@ -12,10 +12,13 @@ ELSE()
   INCLUDE(${ItkVtkGlue_USE_FILE})
   SET(Glue ItkVtkGlue)
 ENDIF()
+
+ADD_LIBRARY(MY_VTK_INTERACTOR_STYLE_IMAGE myVtkInteractorStyleImage.cxx)
+TARGET_LINK_LIBRARIES (MY_VTK_INTERACTOR_STYLE_IMAGE PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
  
 ADD_EXECUTABLE(nifti-vtk main.cxx)
 TARGET_LINK_LIBRARIES(nifti-vtk
-  ${Glue} ${VTK_LIBRARIES} ${ITK_LIBRARIES})
+  ${Glue} ${VTK_LIBRARIES} ${ITK_LIBRARIES} $(MY_VTK_INTERACTOR_STYLE_IMAGE))
 
 SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O2")
 SET(CMAKE_CXX_FLAGS_DEBUG  "-Wall -O0 -g")
