--- a/COMBINED-Examples/nifti-vtk-master/CMakeLists.txt
+++ b/COMBINED-Examples/nifti-vtk-master/CMakeLists.txt
@@ -2,23 +2,22 @@ cmake_minimum_required(VERSION 2.8)
  
 project(nifti-vtk)
  
-FIND_PACKAGE(ITK REQUIRED)
-INCLUDE(${ITK_USE_FILE})
-IF (ITKVtkGlue_LOADED)
-  FIND_PACKAGE(VTK REQUIRED)
-  INCLUDE(${VTK_USE_FILE})
-ELSE()
-  FIND_PACKAGE(ItkVtkGlue REQUIRED)
-  INCLUDE(${ItkVtkGlue_USE_FILE})
-  SET(Glue ItkVtkGlue)
-ENDIF()
-
-ADD_LIBRARY(MY_VTK_INTERACTOR_STYLE_IMAGE myVtkInteractorStyleImage.cxx)
-TARGET_LINK_LIBRARIES (MY_VTK_INTERACTOR_STYLE_IMAGE PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+find_package(ITK REQUIRED)
+include(${ITK_USE_FILE})
+if (ITKVtkGlue_LOADED)
+  find_package(VTK REQUIRED)
+  include(${VTK_USE_FILE})
+else()
+  find_package(ItkVtkGlue REQUIRED)
+  include(${ItkVtkGlue_USE_FILE})
+  set(Glue ItkVtkGlue)
+endif()
  
-ADD_EXECUTABLE(nifti-vtk main.cxx)
-TARGET_LINK_LIBRARIES(nifti-vtk
-  ${Glue} ${VTK_LIBRARIES} ${ITK_LIBRARIES} $(MY_VTK_INTERACTOR_STYLE_IMAGE))
+include_directories ("${PROJECT_SOURCE_DIR}/SliceInteractor")
+add_subdirectory (SliceInteractor) 
 
-SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O2")
-SET(CMAKE_CXX_FLAGS_DEBUG  "-Wall -O0 -g")
+add_executable(nifti-vtk main.cxx)
+target_link_libraries(nifti-vtk ${Glue} ${VTK_LIBRARIES} ${ITK_LIBRARIES} SliceInteractor)
+
+set(CMAKE_CXX_FLAGS_RELEASE "-Wall -O2")
+set(CMAKE_CXX_FLAGS_DEBUG  "-Wall -O0 -g")
