--- a/COMBINED-Examples/nifti-vtk-master/SliceInteractor/CMakeLists.txt
+++ b/COMBINED-Examples/nifti-vtk-master/SliceInteractor/CMakeLists.txt
@@ -3,5 +3,5 @@ cmake_minimum_required(VERSION 2.8)
 find_package(VTK REQUIRED)
 include(${VTK_USE_FILE})
 
-add_library(SliceInteractor myVtkInteractorStyleImage.cxx StatusMessage.cxx)
+add_library(SliceInteractor VtkSliceInteractorStyle.cxx StatusMessage.cxx)
 target_link_libraries(SliceInteractor ${VTK_LIBRARIES})
