Possibly fixed that other problem e.g. BinaryBallStructuralBlablabla.h missing... so obvious thinking about it.

--- a/Sams_Project/Plugins/com.sam.finalyearproject/CMakeLists.txt
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/CMakeLists.txt
@@ -4,5 +4,5 @@ MACRO_CREATE_MITK_CTK_PLUGIN(
   EXPORT_DIRECTIVE FINALYEARPROJECT_EXPORT
   EXPORTED_INCLUDE_SUFFIXES src
   MODULE_DEPENDENCIES MitkQtWidgetsExt
-  PACKAGE_DEPENDS CTK Qt4|QtUiTools
+  PACKAGE_DEPENDS CTK Qt4|QtUiTools ITK|ITKMathematicalMorphology
 )
