Right, the files I needed from the cmdline plugin were internal so I couldn't import them the nice way (using manifest_headers.cmake) so I've had to copy over the ones I needed. Bit of a shame but hey-ho. Still don't know what moc_xxx is supposed to mean but apparently it's required for internal headers (in files.cmake)

--- a/Sams_Project/Plugins/com.sam.finalyearproject/CMakeLists.txt
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/CMakeLists.txt
@@ -3,6 +3,6 @@ project(com_sam_finalyearproject)
 MACRO_CREATE_MITK_CTK_PLUGIN(
   EXPORT_DIRECTIVE FINALYEARPROJECT_EXPORT
   EXPORTED_INCLUDE_SUFFIXES src
-  MODULE_DEPENDENCIES MitkQtWidgetsExt
+  MODULE_DEPENDS MitkQtWidgetsExt
   PACKAGE_DEPENDS CTK Qt4|QtUiTools ITK|ITKMathematicalMorphology
 )
